--- a/GamesCatalog/appsettings.json
+++ b/GamesCatalog/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=GameInsightDB;Integrated Security=True"
+    "GamesDBConnection": "Server=(localdb)\\MSSQLLocalDB;Database=GameDBInVS;Integrated Security=True;MultipleActiveResultSets=True"
   }
 }
